--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body style="font-family: sans-serif; text-align: center; padding: 100px;">
   <h1>[Bedrijfsnaam] stopt</h1>
+  <iframe src="https://embed.beatport.com/?id=18551687&type=track" width="100%" height="162" frameborder="0" scrolling="no" style="max-width:600px;"></iframe>
   <p>Bedankt voor je interesse! Deze onderneming is inmiddels beëindigd.</p>
   <p>Voor vragen kun je nog tijdelijk contact opnemen via <a href="mailto:info@jouwdomein.nl">info@jouwdomein.nl</a></p>
 </body>
 </html>
+
